# daledou

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: run.yml
config/: default.yaml  global.yaml
docs/: README.md  one.md  other.md  two.md
src/daledou/core/: cli.py  config.py  daledou.py  session.py  utils.py
src/daledou/tasks/: common.py  one.py  other.py  two.py
