[project]
name = "daledou"
version = "13.11.0"
description = "Q宠大乐斗自动化任务系统"
authors = [{ name = "雨园"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "V$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = false
major_version_zero = false
